--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-  "url": "https://memeseal.vercel.app",
+  "url": "https://memeseal-casino.vercel.app",
   "name": "MemeSeal Casino",
-  "iconUrl": "https://memeseal.vercel.app/frog-icon.svg",
-  "termsOfUseUrl": "https://memeseal.vercel.app/terms",
-  "privacyPolicyUrl": "https://memeseal.vercel.app/privacy"
+  "iconUrl": "https://memeseal-casino.vercel.app/frog-icon.svg",
+  "termsOfUseUrl": "https://memeseal-casino.vercel.app/terms",
+  "privacyPolicyUrl": "https://memeseal-casino.vercel.app/privacy"
 }
